Adds first version of the style for the blog

--- a/apps/blog/lib/blog_web/templates/page/index.html.slim
+++ b/apps/blog/lib/blog_web/templates/page/index.html.slim
@@ -1,4 +1,6 @@
- = for article <- @articles do
-   h1 = article.title
+= for article <- @articles do
+  article.Article
+    h1.Article-title = article.title
 
-   = raw Earmark.as_html!(article.body)
+    .Article-body
+      = raw Earmark.as_html!(article.body)
