--- a/apps/blog/lib/blog_web/templates/layout/app.html.eex
+++ b/apps/blog/lib/blog_web/templates/layout/app.html.eex
@@ -8,18 +8,21 @@
     <meta name="author" content="">
 
     <title>Hello Blog!</title>
+    <link href="https://fonts.googleapis.com/css?family=Arvo:700|Open+Sans:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
-    <div class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+    <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
-      <main role="main">
-        <%= render @view_module, @view_template, assigns %>
-      </main>
-    </div>
+    <header class="Container">
+      <%= render "header.html", assigns %>
+    </header>
+
+    <main role="main" class="Container">
+      <%= render @view_module, @view_template, assigns %>
+    </main>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
