Improves the style of lists from markdown

--- a/apps/blog/assets/css/_markdown.scss
+++ b/apps/blog/assets/css/_markdown.scss
@@ -288,6 +288,14 @@
   margin: 0;
 }
 
+.Article-body ul {
+  list-style-type: initial;
+}
+
+.Article-body ol {
+  list-style-type: initial;
+}
+
 .Article-body ul,
 .Article-body ol {
   padding-left: 0;
