--- a/apps/blog/lib/blog_web/templates/layout/app.html.eex
+++ b/apps/blog/lib/blog_web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Blog!</title>
+    <title>Zamith in Tech</title>
     <link href="https://fonts.googleapis.com/css?family=Arvo:700|Open+Sans:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
